Justerer lagring av søkt uttak